--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noble FC | District Football Club</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./NFC Website/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -378,6 +378,6 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./NFC Website/js/script.js"></script>
 </body>
 </html>
