--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <div class="logo">
-                <img src="../../Nobal FC logo.jpeg" alt="Noble FC Logo">
+                <img src="./Nobal FC logo.jpeg" alt="Noble FC Logo">
                 <span class="logo-text">NOBLE FC</span>
             </div>
             
@@ -65,7 +65,7 @@
 
     <!-- HERO SECTION -->
     <header id="home" class="hero">
-        <div class="hero-slide active" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../../download\ \(1\).jpeg');">
+        <div class="hero-slide active" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./download\ \(1\).jpeg');">
             <div class="container hero-content">
                 <h1 class="animate-up">Pride of the District</h1>
                 <p class="animate-up delay-1">Developing talent, building character, and winning trophies.</p>
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero-slide" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../../download\ \(2\).jpeg');">
+        <div class="hero-slide" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('./download\ \(2\).jpeg');">
             <div class="container hero-content">
                 <h1>Champions 2024</h1>
                 <p>Join a winning culture. Trials open for U-18 and Seniors.</p>
@@ -101,7 +101,7 @@
             <div class="fixtures-grid">
                 <!-- Fixture Card 1 -->
                 <div class="fixture-card reveal">
-                    <div class="fixture-image" style="background-image: url('../../download.jpeg');"></div>
+                    <div class="fixture-image" style="background-image: url('./download.jpeg');"></div>
                     <div class="fixture-content">
                         <div class="fixture-league">District Premier League</div>
                         <div class="fixture-description">Noble FC vs City United</div>
@@ -114,7 +114,7 @@
 
                 <!-- Fixture Card 2 -->
                 <div class="fixture-card reveal">
-                    <div class="fixture-image" style="background-image: url('../../download (1).jpeg');"></div>
+                    <div class="fixture-image" style="background-image: url('./download (1).jpeg');"></div>
                     <div class="fixture-content">
                         <div class="fixture-league">Youth Championship</div>
                         <div class="fixture-description">U18 Semi-Final Match</div>
@@ -127,7 +127,7 @@
 
                 <!-- Fixture Card 3 -->
                 <div class="fixture-card reveal">
-                    <div class="fixture-image" style="background-image: url('../../download (2).jpeg');"></div>
+                    <div class="fixture-image" style="background-image: url('./download (2).jpeg');"></div>
                     <div class="fixture-content">
                         <div class="fixture-league">District Premier League</div>
                         <div class="fixture-description">Away Match vs Rivals FC</div>
@@ -153,7 +153,7 @@
                 <!-- Seniors Team -->
                 <div class="team-card reveal" id="seniors">
                     <div class="team-card-image">
-                        <img src="../../download (1).jpeg" alt="Senior Team">
+                        <img src="./download (1).jpeg" alt="Senior Team">
                     </div>
                     <div class="team-card-content">
                         <span class="team-badge">Seniors</span>
@@ -165,7 +165,7 @@
                 <!-- U20 Team -->
                 <div class="team-card reveal" id="u20">
                     <div class="team-card-image">
-                        <img src="../../download (2).jpeg" alt="U20 Team">
+                        <img src="./download (2).jpeg" alt="U20 Team">
                     </div>
                     <div class="team-card-content">
                         <span class="team-badge">U20</span>
@@ -177,7 +177,7 @@
                 <!-- U18 Team -->
                 <div class="team-card reveal" id="u18">
                     <div class="team-card-image">
-                        <img src="../../download (3).jpeg" alt="U18 Team">
+                        <img src="./download (3).jpeg" alt="U18 Team">
                     </div>
                     <div class="team-card-content">
                         <span class="team-badge">U18</span>
@@ -189,7 +189,7 @@
                 <!-- U16 Team -->
                 <div class="team-card reveal" id="u16">
                     <div class="team-card-image">
-                        <img src="../../download.jpeg" alt="U16 Team">
+                        <img src="./download.jpeg" alt="U16 Team">
                     </div>
                     <div class="team-card-content">
                         <span class="team-badge">U16</span>
@@ -216,7 +216,7 @@
                 <a href="#" class="btn btn-primary">Read Our Story</a>
             </div>
             <div class="about-image reveal">
-                <img src="../../download.jpeg" alt="Club Trophy">
+                <img src="./download.jpeg" alt="Club Trophy">
                 <div class="experience-badge">
                     <span class="years">25+</span>
                     <span class="text">Years of Excellence</span>
@@ -235,7 +235,7 @@
             <div class="gallery-grid">
                 <!-- Gallery Item 1 -->
                 <div class="gallery-item reveal">
-                    <img src="../../download.jpeg" alt="Match Action">
+                    <img src="./download.jpeg" alt="Match Action">
                     <div class="gallery-overlay">
                         <h4>Championship Victory</h4>
                         <p>Celebrating our latest trophy win</p>
@@ -245,7 +245,7 @@
 
                 <!-- Gallery Item 2 -->
                 <div class="gallery-item reveal">
-                    <img src="../../download (1).jpeg" alt="Training">
+                    <img src="./download (1).jpeg" alt="Training">
                     <div class="gallery-overlay">
                         <h4>Training Session</h4>
                         <p>Preparing for the big game</p>
@@ -255,7 +255,7 @@
 
                 <!-- Gallery Item 3 -->
                 <div class="gallery-item reveal">
-                    <img src="../../download (2).jpeg" alt="Awards">
+                    <img src="./download (2).jpeg" alt="Awards">
                     <div class="gallery-overlay">
                         <h4>Team Spirit</h4>
                         <p>Unity on and off the field</p>
@@ -265,7 +265,7 @@
 
                 <!-- Gallery Item 4 -->
                 <div class="gallery-item reveal">
-                    <img src="../../download (3).jpeg" alt="Youth Team">
+                    <img src="./download (3).jpeg" alt="Youth Team">
                     <div class="gallery-overlay">
                         <h4>Youth Development</h4>
                         <p>Building future stars</p>
@@ -275,7 +275,7 @@
 
                 <!-- Gallery Item 5 -->
                 <div class="gallery-item reveal">
-                    <img src="../../download.jpeg" alt="Match Day">
+                    <img src="./download.jpeg" alt="Match Day">
                     <div class="gallery-overlay">
                         <h4>Match Day Atmosphere</h4>
                         <p>Our passionate supporters</p>
@@ -285,7 +285,7 @@
 
                 <!-- Gallery Item 6 -->
                 <div class="gallery-item reveal">
-                    <img src="../../download (1).jpeg" alt="Community">
+                    <img src="./download (1).jpeg" alt="Community">
                     <div class="gallery-overlay">
                         <h4>Community Outreach</h4>
                         <p>Giving back to our fans</p>
@@ -350,7 +350,7 @@
         <div class="container footer-grid">
             <div class="footer-info">
                 <div class="logo">
-                    <img src="../../Nobal FC logo.jpeg" alt="Logo" style="width: 50px;">
+                    <img src="./Nobal FC logo.jpeg" alt="Logo" style="width: 50px;">
                     <span>NOBLE FC</span>
                 </div>
                 <p>The official website of Noble Football Club. Dedicated to the beautiful game.</p>
