added by me a coffee button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="nav-actions">
                 <a href="#join" class="btn btn-primary">Join Us</a>
-                <a href="#" target="_blank" class="btn btn-secondary">Support Us</a>
+                <a href="https://buymeacoffee.com/SK_Sheeraz" target="_blank" class="btn btn-secondary">Support Us</a>
             </div>
 
             <div class="hamburger">
