updated dashboard link

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <li><a href="#">Staff & Management</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="../admin/login.html" style="color: #666; font-size: 0.8rem;">Admin Login</a></li>
+                    <li><a href="./NFC Website/html/dashboard.html" style="color: #666; font-size: 0.8rem;">Admin Login</a></li>
                 </ul>
             </div>
             <div class="footer-social">
