--- a/NFC Website/html/dashboard.html
+++ b/NFC Website/html/dashboard.html
@@ -159,9 +159,9 @@
                 <div class="recent-uploads">
                     <h3>Recent Uploads</h3>
                     <div class="upload-grid">
-                        <div class="upload-item"><img src="../download.jpeg"></div>
-                        <div class="upload-item"><img src="../download (1).jpeg"></div>
-                        <div class="upload-item"><img src="../download (3).jpeg"></div>
+                        <div class="upload-item"><img src="../../download.jpeg"></div>
+                        <div class="upload-item"><img src="../../download (1).jpeg"></div>
+                        <div class="upload-item"><img src="../../download (3).jpeg"></div>
                     </div>
                 </div>
             </div>
