updated linin page links

--- a/NFC Website/html/login.html
+++ b/NFC Website/html/login.html
@@ -37,7 +37,7 @@
         </form>
         
         <div class="login-footer">
-            <a href="../index.html">Back to Website</a>
+            <a href="../../index.html">Back to Website</a>
         </div>
     </div>
 
