--- a/NFC Website/html/dashboard.html
+++ b/NFC Website/html/dashboard.html
@@ -25,7 +25,7 @@
             </ul>
 
             <div class="sidebar-footer">
-                <a href="login.html" class="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                <a href="./login.html" class="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a>
             </div>
         </aside>
 
